force-app/main/default/objects/PS_ASU_SR_INDASR_V__x/PS_ASU_SR_INDASR_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1qq04lj3JF0Id80FqC9KERhm-z-zw2rjP51GcISYeJTM/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SR_INDASR_Vs</externalName>
    <label>Academic Status Report Indicator (ext)</label>
    <pluralLabel>Academic Status Report Indicator (ext)</pluralLabel>
</CustomObject>