force-app/main/default/objects/PS_ASU_SR_INDASR_V__x/fields/CLASSCOUNT__c.field-meta.xml
<CustomField>
    <fullName>CLASSCOUNT__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.Count of distinct CLASS_NBR</description>
    <externalDeveloperName>CLASSCOUNT</externalDeveloperName>
    <label>Class Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>