force-app/main/default/objects/PS_ASU_SR_INDASR_V__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Status Report Indicator (ext)</relationshipLabel>
    <relationshipName>Academic_Status_Report_Indicator_ext</relationshipName>
    <type>IndirectLookup</type>
</CustomField>