force-app/main/default/objects/PS_ASU_SR_INDASR_V__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Academic Status Report Indicator (ext)</relationshipLabel>
    <relationshipName>Academic_Status_Report_Indicator_ext</relationshipName>
    <type>IndirectLookup</type>
</CustomField>